# myknowledge

./: .env.example  .gitignore  MyKnowledge.md  README.md  alembic.ini  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/scripts/claude-hook/: claude_hook.py  claude_hook_config.json  install_hook.sh
backend/scripts/macOS-service/: install_service.sh  uninstall_service.sh
backend/src/rememberit/: __init__.py  __main__.py  config.py  types.py
backend/src/rememberit/api/: app.py
backend/src/rememberit/extraction/: llm_client.py  pipeline.py
backend/src/rememberit/mcp/: server.py
backend/src/rememberit/retrieval/: embedding.py  scorer.py  search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/server/: index.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useKnowledgeGraph.ts  useMemories.ts  useScrollReveal.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx
frontend/src/types/: graph.ts  memory.ts
scripts/: CLAUDE.md.template  claude_hook.py  claude_hook_config.json  install_hook.sh  install_service.sh  uninstall_service.sh
src/myknowledge/: __init__.py  __main__.py  config.py  types.py
src/myknowledge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/myknowledge/api/: app.py
src/myknowledge/extraction/: llm_client.py  pipeline.py
src/myknowledge/mcp/: server.py
src/myknowledge/retrieval/: embedding.py  scorer.py  search.py
src/myknowledge/storage/: db.py  models.py  repository.py
(+30 files in other folders)
